# filehandler

./: Makefile.am  README  configure.ac  filehandler.spec.in  libgpsfile2-providergpsroute.pc.in  libgpsfile2.pc.in  libgpsfile2.spec.in
examples/: PrintGpsRoute.hpp  Routes.hpp  read_and_write_gpx.cpp  read_gpx.cpp  read_openambit.cpp  write_and_read_gpx.cpp  write_gpx.cpp  write_gpx_provider.cpp  write_gpx_provider.hpp
include/: filehandler.hpp  gpsdata  gpsdata.hpp  libgpsfile2.hpp
include/filehandler/: FileHandlerManager.hpp  PluginHelper.hpp
include/filehandler/handler/: HandlerBase.hpp  HandlerReaderBase.hpp  HandlerWriterBase.hpp
include/filehandler/provider/: ProviderBase.hpp  ProviderReaderBase.hpp  ProviderWriterBase.hpp
include/filehandler/provider/types/route/: ProviderRouteBase.hpp  ProviderRouteReaderBase.hpp  ProviderRouteWriterBase.hpp
include/filehandler/provider/types/route/impl/: ProviderGpsRoute.hpp  ProviderGpsRouteBase.hpp  ProviderGpsRouteReader.hpp  ProviderGpsRouteWriter.hpp
include/filehandler/traits/: HandlerReaderTrait.hpp  HandlerWriterTrait.hpp  ProviderReaderTrait.hpp  ProviderWriterTrait.hpp  common.hpp
include/filehandler/types/: BasePlugin.hpp  HandlerCreatorFunc.hpp  PluginCreatorFunc.hpp  PluginDetails.hpp
include/filehandler/utils/: Iobuf.hpp  IobufBase.hpp  Strings.hpp  StringsBase.hpp  dynamic_unique_ptr_cast.hpp
include/libgpsfile2/: BasePlugin.hpp  ConstValue.hpp  Datahandler.hpp  DatahandlerRoute.hpp  GpsfileManager.hpp  GpsfilePlugin.hpp  PluginHandler.hpp  PluginHelper.hpp
include/libgpsfile2/handler/: HandlerBase.hpp  HandlerReaderBase.hpp  HandlerWriterBase.hpp
include/libgpsfile2/provider/: ProviderBase.hpp  ProviderGpsRouteReader.hpp  ProviderGpsRouteWriter.hpp  ProviderReaderBase.hpp  ProviderRouteBase.hpp  ProviderRouteReaderBase.hpp  ProviderRouteWriterBase.hpp  ProviderWriterBase.hpp  provider.hpp
include/libgpsfile2/provider/impl/: ProviderGpsRoute.hpp  ProviderGpsRouteBase.hpp  ProviderGpsRouteReader.hpp  ProviderGpsRouteUtils.hpp  ProviderGpsRouteWriter.hpp  ProviderGpsRouteWriter.hpp.bak
include/libgpsfile2/traits/: Datahandler.hpp  HandlerProviderPair.hpp  HandlerReaderTrait.hpp  HandlerWriterTrait.hpp  ProviderReaderTrait.hpp  ProviderWriterTrait.hpp  provider.hpp
include/libgpsfile2/types/: BasePlugin.hpp  Creator.hpp  HandlerCreatorFunc.hpp  HandlerType.hpp  PluginCreatorFunc.hpp  PluginDetails.hpp
include/libgpsfile2/utils/: Iobuf.hpp  IobufBase.hpp  Strings.hpp  StringsBase.hpp  dynamic_unique_ptr_cast.hpp
plugins/gpx/: Plugin.cpp  Plugin.hpp  Reader.cpp  Reader.hpp  Report.cpp  Report.hpp  Writer.cpp  Writer.hpp  gpxplugin.cpp  gpxplugin.hpp  gpxreader.cpp  gpxreader.hpp  gpxreport.cpp  gpxreport.hpp  gpxwriter.cpp  gpxwriter.hpp  plugin.cpp
plugins/openambit/: OpenambitPlugin.cpp  OpenambitPlugin.hpp  OpenambitWriter.cpp  OpenambitWriter.hpp  Parser.cpp  Parser.hpp  Plugin.cpp  Plugin.hpp  Writer.cpp  Writer.hpp  plugin.cpp
src/: Datahandler.cpp  DatahandlerPlain.cpp  DatahandlerPlain.hpp  FileHandlerManager.cpp  GpsfileManager.cpp  GpsfilePlugin.cpp
src/ProviderGpsRoute/: ProviderGpsRoute.cpp
src/handler/: HandlerBase.cpp  HandlerPlainReader.cpp  HandlerPlainReader.hpp  HandlerPlainWriter.cpp  HandlerPlainWriter.hpp  HandlerReaderBase.cpp  HandlerWriterBase.cpp
src/utils/: Iobuf.cpp  Strings.cpp
tests/: Makefile.am  test-Iobuf.cpp  test-Iostream-Iobuf.cpp  test-Strings.cpp
